fix footer on mobile

--- a/app/_css/mobile.sass
+++ b/app/_css/mobile.sass
@@ -6,6 +6,11 @@ $max-height: 659px;
 =mobile-view
   max-width: $max-width;
 
+  *
+    -webkit-touch-callout: none;
+    -webkit-text-size-adjust: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+
   #header, .footer, .button
     border-radius: 0;
 
@@ -87,13 +92,13 @@ $max-height: 659px;
     opacity: 1;
 
   .footer
-    transform: translateY($footerh + 1px);
+    bottom: 0;
+    transform: translateY(0);
 
   #body.tab
    #form, #otp-form
     .footer
-      transform: translateY(0);
-      z-index: 91;
+      z-index: 92;
 
 @media (max-device-height: 450px), (max-device-width: 450px)
   +mobile-view();
