--- a/app/_css/modal.sass
+++ b/app/_css/modal.sass
@@ -348,7 +348,7 @@ i
 .footer
   position: absolute;
   left: 0;
-  bottom: -$topbarh;
+  bottom: -$footerh + 1px;
   width: 100%;
   font-size: 16px;
   line-height: 56px;
